use optimized copyfile

--- a/setup.cfg
+++ b/setup.cfg
@@ -70,6 +70,7 @@ install_requires =
     dvc-render==0.0.5
     dvclive>=0.7.3
     dvc-data==0.0.2
+    dvc-objects @ git+https://github.com/iterative/dvc-objects@optimize-copyfile
 
 [options.extras_require]
 all =
